[gd_scene load_steps=13 format=3 uid="uid://cxgcri56h3yo4"]

[ext_resource type="Texture2D" uid="uid://bu8rgx2w7gdio" path="res://Backgrounds/darkPurple.png" id="1_ngs7s"]
[ext_resource type="Script" path="res://Scenes/level.gd" id="1_utly8"]
[ext_resource type="PackedScene" uid="uid://b3gghw1d18we4" path="res://Scenes/player.tscn" id="2_bbac5"]
[ext_resource type="Texture2D" uid="uid://d3bbbfy6ar611" path="res://PNG/Effects/star1.png" id="3_g45us"]
[ext_resource type="Texture2D" uid="uid://b57dhjkdf5qt2" path="res://PNG/Effects/star2.png" id="4_gr608"]
[ext_resource type="Texture2D" uid="uid://dioli1et1wlop" path="res://PNG/Effects/star3.png" id="5_b5dau"]
[ext_resource type="PackedScene" uid="uid://bm6rdcpuefxi5" path="res://Scenes/ui.tscn" id="7_ix3dh"]
[ext_resource type="AudioStream" uid="uid://c6t2opl6vqsnt" path="res://Audio/8bit-music-for-game-68698.mp3" id="8_u6skt"]
[ext_resource type="AudioStream" uid="uid://c8guvrcm1toa7" path="res://Audio/sfx_shieldUp.ogg" id="9_mfa7y"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k5k0h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_g45us")
}, {
"duration": 1.0,
"texture": ExtResource("4_gr608")
}, {
"duration": 1.0,
"texture": ExtResource("5_b5dau")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vp0fe"]
size = Vector2(102, 776)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_282fe"]
size = Vector2(1429.5, 88)

[node name="Level" type="Node2D"]
script = ExtResource("1_utly8")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(641, 360)
scale = Vector2(5.234, 2.954)
texture = ExtResource("1_ngs7s")
metadata/_edit_lock_ = true

[node name="Stars" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.22166

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D7" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D8" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D9" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D10" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D11" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D12" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D13" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D14" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D15" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D16" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D17" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D18" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D19" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D20" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D21" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D22" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D23" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D24" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D25" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D26" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D27" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D28" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D29" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D30" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D31" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D32" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D33" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D34" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D35" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D36" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D37" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D38" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D39" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D40" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D41" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D42" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="AnimatedSprite2D43" type="AnimatedSprite2D" parent="Stars"]
position = Vector2(356.25, 215)
scale = Vector2(0.558, 0.6)
sprite_frames = SubResource("SpriteFrames_k5k0h")
autoplay = "default"
frame_progress = 0.41603

[node name="Player" parent="." instance=ExtResource("2_bbac5")]
position = Vector2(853, 544)

[node name="Borders" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D"]
position = Vector2(-50, 368)
shape = SubResource("RectangleShape2D_vp0fe")

[node name="StaticBody2D2" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D2"]
position = Vector2(1333, 365)
shape = SubResource("RectangleShape2D_vp0fe")

[node name="StaticBody2D3" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D3"]
position = Vector2(640.25, -44)
shape = SubResource("RectangleShape2D_282fe")

[node name="StaticBody2D4" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D4"]
position = Vector2(647, 766)
shape = SubResource("RectangleShape2D_282fe")

[node name="MeteorTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Meteors" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Lasers" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="UI" parent="." instance=ExtResource("7_ix3dh")]

[node name="GameMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_u6skt")
volume_db = -5.0

[node name="GameStartSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_mfa7y")

[connection signal="laser" from="Player" to="." method="_on_player_laser"]
[connection signal="timeout" from="MeteorTimer" to="." method="_on_meteor_timer_timeout"]
